# Mindwarp-forge

./: .gitattributes  .gitignore  AGENTS.md  AI_HANDOFF.md  Cargo.toml  README.md
context/: README.md
contracts/: backup-recovery-contract.md  batch-event-contract.md  body-plan-structure-contract.md  calibrated-source-energy-distribution-contract.md  calibrated-spectral-time-basis-contract.md  chunked-source-assembly-contract.md  climate-state-contract.md  code-admission-contract.md  codex-local-capture-contract.md  containment-profile-contract.md  control-calibration-contract.md  control-plane-record-contract.md  controlled-application-contract.md  conversation-compiler-contract.md  derived-world-rules-contract.md  dossier-projection-contract.md  ecological-niche-semantics-contract.md  environmental-opportunity-contract.md  explicit-authorization-contract.md  field-basis-contract.md  (+58 more)
crates/calibrated-source-energy-distribution/: Cargo.toml  MODULE.md
crates/calibrated-source-energy-distribution/fixtures/: distribution_v1_identity_lock.json
crates/calibrated-source-energy-distribution/src/: lib.rs
crates/calibrated-source-energy-distribution/tests/: distribution.rs  public_surface.rs
crates/calibrated-spectral-time-basis/: Cargo.toml  MODULE.md
crates/calibrated-spectral-time-basis/fixtures/: calibration_v1_identity_lock.json
crates/calibrated-spectral-time-basis/src/: lib.rs
crates/calibrated-spectral-time-basis/tests/: calibration.rs
crates/climate-state/: Cargo.toml  MODULE.md
crates/climate-state/src/: lib.rs
crates/containment-canary-runner/: Cargo.toml  MODULE.md
crates/containment-canary-runner/src/: lib.rs  main.rs
crates/containment-denial-canary/: Cargo.toml  MODULE.md  build.rs
crates/containment-denial-canary/src/: main.rs
crates/control-calibration/: Cargo.toml  MODULE.md
crates/control-calibration/examples/: h4_receipt.rs
crates/control-calibration/src/: lib.rs
crates/derived-world-rules/: Cargo.toml  MODULE.md
crates/derived-world-rules/examples/: range_regional_cost_portfolio.rs
crates/derived-world-rules/src/: lib.rs
crates/field-basis/: Cargo.toml  MODULE.md
crates/field-basis/examples/: quality_cost_range_candidate.rs  second_language_vectors.rs
crates/field-basis/fixtures/: second-language-v1.json
crates/field-basis/src/: lib.rs
crates/humanoid-generation/: Cargo.toml  MODULE.md
crates/humanoid-generation/examples/: h3_receipt.rs
crates/humanoid-generation/src/: lib.rs
crates/humanoid-proof-chain/: Cargo.toml  MODULE.md
crates/humanoid-proof-chain/examples/: h6_receipt.rs  h7_readiness.rs
crates/humanoid-proof-chain/src/: lib.rs  promotion.rs
crates/macro-lineage-binding/: Cargo.toml  MODULE.md
crates/macro-lineage-binding/src/: lib.rs
crates/mindwarp-gameplay-foundation/: Cargo.toml  MODULE.md
crates/mindwarp-gameplay-foundation/src/: base_loop.rs  encounter_grammar.rs  fixtures.rs  lib.rs  progression.rs
crates/mindwarp-gameplay-foundation/tests/: gp0_contract.rs  gp1_base_loop.rs  gp2_progression.rs  gp3_encounter_grammar.rs
crates/mindwarp-gameplay-foundation/tests/world_support/: mod.rs
crates/mindwarp-signal-anchor-vertical/: Cargo.toml  MODULE.md
crates/mindwarp-signal-anchor-vertical/src/: lib.rs
crates/mindwarp-signal-anchor-vertical/tests/: gp4_signal_anchor.rs
crates/mindwarp-vertical-persistence/: Cargo.toml  MODULE.md
crates/mindwarp-vertical-persistence/src/: lib.rs
crates/optical-lane-transfer-binding/: Cargo.toml  MODULE.md
crates/optical-lane-transfer-binding/src/: lib.rs
crates/optical-lane-transfer-binding/tests/: cumulative.rs
crates/optical-lineage-binding/: Cargo.toml  MODULE.md
crates/optical-lineage-binding/src/: lib.rs
crates/optical-lineage-binding/tests/: lineage.rs
crates/optical-phase-space-dimensionless-transfer/: Cargo.toml  MODULE.md
crates/optical-phase-space-dimensionless-transfer/src/: lib.rs
crates/optical-phase-space-dimensionless-transfer/tests/: dimensionless_transfer.rs
crates/optical-phase-space-receiver-coupling/: Cargo.toml  MODULE.md
crates/optical-phase-space-receiver-coupling/src/: lib.rs
crates/optical-phase-space-receiver-coupling/tests/: coupling.rs
crates/optical-phase-space-transport-certificate/: Cargo.toml  MODULE.md
crates/optical-phase-space-transport-certificate/src/: lib.rs
crates/organism-niche-binding/: Cargo.toml  MODULE.md
crates/organism-niche-binding/src/: lib.rs
crates/organism-subject-identity/: Cargo.toml  MODULE.md
crates/organism-subject-identity/src/: lib.rs
crates/organism-subject-identity/tests/: real_subject_replay.rs  red_contract.rs
crates/physical-region-partition/: Cargo.toml  MODULE.md
crates/physical-region-partition/src/: lib.rs
crates/receiver-arrival-geometry-binding/: Cargo.toml  MODULE.md
crates/receiver-arrival-geometry-binding/src/: lib.rs
crates/receiver-arrival-geometry-binding/tests/: receiver.rs
crates/regional-environment-state/: Cargo.toml  MODULE.md
crates/regional-environment-state/src/: lib.rs
crates/representation-contract/: Cargo.toml  MODULE.md
crates/representation-contract/examples/: h2_receipt.rs
crates/representation-contract/src/: lib.rs  model.rs  neutral_humanoid.rs  proof.rs  validate.rs
crates/surface-material-state/: Cargo.toml  MODULE.md
crates/surface-material-state/src/: lib.rs
crates/universe-identity/: Cargo.toml  MODULE.md
crates/universe-identity/src/: lib.rs
crates/visible-radiance-bulk-transfer/: Cargo.toml  MODULE.md
crates/visible-radiance-bulk-transfer/fixtures/: bulk_v1_identity_lock.json
crates/visible-radiance-bulk-transfer/src/: interval.rs  lib.rs
crates/visible-radiance-bulk-transfer/tests/: bulk_v1_identity_lock.rs  interval_bulk.rs  optical_depth_evaluation.rs
crates/visible-radiance-interface-event/: Cargo.toml  MODULE.md
crates/visible-radiance-interface-event/fixtures/: point_v1_identity_lock.json
crates/visible-radiance-interface-event/src/: arithmetic.rs  interval.rs  lib.rs
crates/visible-radiance-interface-event/tests/: interval_interface.rs  point_v1_identity_lock.rs
(+757 files in other folders)
