[package]
name = "climate-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hydrological-state = { path = "../hydrological-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
geological-atmospheric = { path = "../geological-atmospheric" }
stellar-orbital = { path = "../stellar-orbital" }
