[package]
name = "containment-denial-canary"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "containment-denial-canary"
path = "src/main.rs"
test = false
bench = false

[dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
