[package]
name = "derived-world-rules"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
climate-state = { path = "../climate-state" }
field-basis = { path = "../field-basis" }
geological-atmospheric = { path = "../geological-atmospheric" }
hydrological-state = { path = "../hydrological-state" }
regional-environment-state = { path = "../regional-environment-state" }
stellar-orbital = { path = "../stellar-orbital" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
surface-material-state = { path = "../surface-material-state" }
