[package]
name = "field-basis"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
minicbor = { version = "0.26", features = ["std"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
universe-identity = { path = "../universe-identity" }

[dev-dependencies]
serde_json = "1"
