[package]
name = "humanoid-generation"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reference-viewport = { path = "../reference-viewport" }
representation-contract = { path = "../representation-contract" }
semantic-construction = { path = "../semantic-construction" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
