[package]
name = "humanoid-proof-chain"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
control-calibration = { path = "../control-calibration" }
humanoid-generation = { path = "../humanoid-generation" }
reference-intake = { path = "../reference-intake" }
representation-contract = { path = "../representation-contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
