[package]
name = "macro-lineage-binding"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
derived-world-rules = { path = "../derived-world-rules" }
niche-graph-binding = { path = "../niche-graph-binding" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
field-basis = { path = "../field-basis" }
