[package]
name = "mindwarp-gameplay-foundation"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
derived-world-rules = { path = "../derived-world-rules" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
field-basis = { path = "../field-basis" }
