[package]
name = "mindwarp-signal-anchor-vertical"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
addressable-world-binding = { path = "../addressable-world-binding" }
derived-world-rules = { path = "../derived-world-rules" }
field-basis = { path = "../field-basis" }
hierarchy-history = { path = "../hierarchy-history" }
mindwarp-gameplay-foundation = { path = "../mindwarp-gameplay-foundation" }
mindwarp-vertical-persistence = { path = "../mindwarp-vertical-persistence" }
universe-identity = { path = "../universe-identity" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
