[package]
name = "mindwarp-vertical-persistence"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
addressable-world-binding = { path = "../addressable-world-binding" }
derived-world-rules = { path = "../derived-world-rules" }
hierarchy-history = { path = "../hierarchy-history" }
mindwarp-gameplay-foundation = { path = "../mindwarp-gameplay-foundation" }
universe-identity = { path = "../universe-identity" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
field-basis = { path = "../field-basis" }
