[package]
name = "optical-lane-transfer-binding"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
optical-lineage-binding = { path = "../optical-lineage-binding" }
visible-radiance-bulk-transfer = { path = "../visible-radiance-bulk-transfer" }
visible-radiance-interface-event = { path = "../visible-radiance-interface-event" }
fixed-interval-arithmetic = { path = "../fixed-interval-arithmetic" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
physical-path-substrate = { path = "../physical-path-substrate" }
