[package]
name = "optical-lineage-binding"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
physical-path-substrate = { path = "../physical-path-substrate" }
visible-radiance-bulk-transfer = { path = "../visible-radiance-bulk-transfer" }
visible-radiance-interface-event = { path = "../visible-radiance-interface-event" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

