[package]
name = "organism-niche-binding"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
derived-world-rules = { path = "../derived-world-rules" }
semantic-construction = { path = "../semantic-construction" }
sha2 = "0.10"

[dev-dependencies]
field-basis = { path = "../field-basis" }
