[package]
name = "physical-region-partition"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
climate-state = { path = "../climate-state" }
regional-environment-state = { path = "../regional-environment-state" }
spatial-domain = { path = "../spatial-domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
field-basis = { path = "../field-basis" }
geological-atmospheric = { path = "../geological-atmospheric" }
hydrological-state = { path = "../hydrological-state" }
stellar-orbital = { path = "../stellar-orbital" }
