[package]
name = "receiver-arrival-geometry-binding"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
optical-lineage-binding = { path = "../optical-lineage-binding" }
physical-path-substrate = { path = "../physical-path-substrate" }
fixed-interval-arithmetic = { path = "../fixed-interval-arithmetic" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
visible-radiance-bulk-transfer = { path = "../visible-radiance-bulk-transfer" }

