[package]
name = "regional-environment-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
field-basis = { path = "../field-basis" }
spatial-domain = { path = "../spatial-domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
