[package]
name = "representation-contract"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reference-intake = { path = "../reference-intake" }
reference-viewport = { path = "../reference-viewport" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
