[package]
name = "surface-material-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
climate-state = { path = "../climate-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
geological-atmospheric = { path = "../geological-atmospheric" }
hydrological-state = { path = "../hydrological-state" }
stellar-orbital = { path = "../stellar-orbital" }
