[package]
name = "universe-identity"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hkdf = "0.12"
hmac = "0.12"
minicbor = { version = "0.26", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
serde_json = "1.0"
