[package]
name = "visible-radiance-interface-event"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
crypto-bigint = { version = "=0.7.5", default-features = false }
physical-path-substrate = { path = "../physical-path-substrate" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
